@@ -1,3 +1,8 @@
+2005-11-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/compat/deprecated.h: add inp/outp/sbi/cbi.
+	* include/compat/ina90.h: add minimal doxygen documentation.
+
 2005-11-05 Anatoly Sokolov <aesok@pautinka.net>
 
 	* libc/string/strcasecmp.S: Make labels local, add Id line, 
